--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="max-width">
 					<div class="home-content">
 						<div class="text-1">Building You</div>
-						<div class="text-2">Great Websites</div>
+						<div class="text-2">Great Websites YES</div>
 						<div class="text-3">That Sell.</div>
 						<a href="#">Learn More</a>
 					</div>
